--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
 
 .board {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 1fr); */
   justify-content: center;
 }
 
